--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -129,5 +129,8 @@
   "select_language": "Select Language",
   "total_incomes": "Incomes",
   "total_expenses": "Expenses",
-  "total_amount": "Total"
+  "total_amount": "Total",
+  "balance": "Balance",
+  "payments": "Payments",
+  "charges": "Charges"
 }
