--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -79,8 +79,8 @@
       "create": "Create",
       "edit": "Update"
     },
-    "income": "Income",
-    "expense": "Expense"
+    "income": "Payment",
+    "expense": "Charge"
   },
   "ledger_create_or_edit_view": {
     "appbar_title": {
@@ -132,5 +132,6 @@
   "total_amount": "Total",
   "balance": "Balance",
   "payments": "Payments",
-  "charges": "Charges"
+  "charges": "Charges",
+  "surplus": "Surplus"
 }
