--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -23,6 +23,7 @@
     "change_password_btn": "Change Password",
     "delete_account_btn": "Delete Account",
     "change_language_btn": "Change Language",
+    "change_theme_btn": "Change Theme",
     "logout_btn": "Logout"
   },
   "change_password_view": {
@@ -133,5 +134,11 @@
   "balance": "Balance",
   "payments": "Payments",
   "charges": "Charges",
-  "surplus": "Surplus"
+  "surplus": "Surplus",
+  "select_theme": "Select Theme",
+  "theme_mode": {
+    "system": "System",
+    "light": "Light",
+    "dark": "Dark"
+  }
 }
