chore: update message

--- a/assets/translations/el.json
+++ b/assets/translations/el.json
@@ -97,7 +97,7 @@
   },
   "ledger_share_view": {
     "appbar_title": "Κοινοποίηση",
-    "share_msg": "Τα emails που προσθέτετε εδώ θα έχουν πρόσβαση προβολής σε αυτό το βιβλίο",
+    "share_msg": "Τα emails που προσθέτετε εδώ θα έχουν πρόσβαση προβολής σε αυτό το βιβλίο. Θα μπορούν να δουν όλες τις συναλλαγές και τις επαφές.",
     "add_email_btn": "Προσθήκη Email",
     "share_with_noone_msg": "Δεν κοινοποιείτε αυτό το βιβλίο με κανέναν",
     "add_email_dialog_title": "Κοινοποίηση με",
