chore: add donate button

--- a/assets/translations/el.json
+++ b/assets/translations/el.json
@@ -153,5 +153,6 @@
     "light": "Φωτεινό",
     "dark": "Σκοτεινό"
   },
-  "app_name": "Ταμείο"
+  "app_name": "Ταμείο",
+  "donate_to_developer": "Δωρεά στον προγραμματιστή"
 }
