--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -153,5 +153,6 @@
     "light": "Light",
     "dark": "Dark"
   },
-  "app_name": "Shared Ledger"
+  "app_name": "Shared Ledger",
+  "donate_to_developer": "Donate to developer"
 }
